# midjargon

./: .cursorrules  .gitignore  CHANGELOG.md  CODE.md  ERRORS.txt  LOG.md  README.md  REFACTOR_SPLITTING.md  SPEC.md  TODO.md  TODO2.md  build.sh  install.sh  llms.txt  md.txt  midjargon.txt  package.toml  printme.sh  publish.sh  pyproject.toml  pytest.ini  updateme.sh
.cursor/rules/: midjargon.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: push.yml  release.yml
_previous/: midjargon.txt  test_parameters.py  test_workflow.py
core/: test_parameters.py
docs/: midjourney-docs.md  prompts.sh  prompts_results.txt  prompts_results2.txt  refactoring-ideas.md  specification.md
examples/: basic_usage.py
src/midjargon/: __init__.py  __main__.py  midjargon.py  midjourney.py  parameters.py  permutations.py
src/midjargon/cli/: __init__.py  main.py
src/midjargon/core/: __init__.py  converter.py  input.py  main.py  models.py  parameters.py  parser.py  permutations.py  type_defs.py
src/midjargon/engines/: __init__.py  base.py
src/midjargon/engines/fal/: __init__.py  _fal.py  converter.py  fal.py
src/midjargon/engines/midjourney/: ____parser-OLD.py  __init__.py  constants.py  midjourney.py  models.py  parser.py
src/midjargon/engines/midjourney/parser/: __init__.py  core.py  exceptions.py  parameters.py  validation.py
src/midjourney/engines/midjourney/: parser.py
test-cases/: prompts-fal.txt  prompts-in.txt  prompts-json.txt  prompts-mj.txt  prompts-out.txt  prompts-perm.txt  prompts.sh
tests/: __init__.py  conftest.py  test_core.py  test_midjargon.py  test_package.py  test_parameters.py  test_permutations.py
tests/cli/: __init__.py  test_main.py
tests/core/: __init__.py  test_input.py  test_parameters.py  test_parser.py  test_permutations.py
tests/engines/: __init__.py  test_base.py
tests/engines/midjourney/: __init__.py  test_midjourney_parser.py  test_parser.py
tests/integration/: __init__.py  test_workflow.py
